--- a/IsArtOrders/Pages/ClientOrders.xaml
+++ b/IsArtOrders/Pages/ClientOrders.xaml
@@ -9,6 +9,45 @@
       Title="ClientOrders">
 
     <Grid>
-        
+        <ListView x:Name="lvOrders">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Order_Wishs}"
+                                   TextWrapping="Wrap"
+                                   Margin="10"/>
+                        <TextBlock Text="{Binding Categories.CategoryName}"
+                                   TextWrapping="Wrap"
+                                   Margin="10"/>
+                        <StackPanel Orientation="Vertical" Margin="5">
+                            <TextBlock Text="Ссылка на макет в Figma"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                            <TextBlock Text="{Binding Order_DesignLink}"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <TextBlock Text="Ссылка на репозиторию GitHub"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                            <TextBlock Text="{Binding Order_RepLink}"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <TextBlock Text="Цена"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                            <TextBlock Text="{Binding Order_Price}"
+                                       TextWrapping="Wrap"
+                                       Margin="5"/>
+                        </StackPanel>
+                        <TextBlock x:Name="tblockStatus" Margin="10"
+                                   Text="{Binding OrderStatus.Status_Name}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
